crates/leptos_csr_preload/tests/ui/lazy_route_invalid_argument.stderr
error: supported arguments: `name = ...`, `preload_path = "..."`, `preload_paths = ["...", ...]`
 --> tests/ui/lazy_route_invalid_argument.rs:8:14
  |
8 | #[lazy_route(path = "/invalid")]
  |              ^^^^

warning: unused import: `leptos::prelude::*`
 --> tests/ui/lazy_route_invalid_argument.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `leptos_router::LazyRoute`
 --> tests/ui/lazy_route_invalid_argument.rs:3:5
  |
3 | use leptos_router::LazyRoute;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
